src_old/objects/AttributeDefinedResponse__c.object
<CustomObject>
    <fields>
        <fullName>Attribute__c</fullName>
        <label>Attribute</label>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>AttributeDefinedResponse</relationshipLabel>
        <relationshipName>AttributeDefinedResponses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DefinedResponseOrder__c</fullName>
        <inlineHelpText>the sequence in which responses have to be displayed</inlineHelpText>
        <label>Defined Response Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DefinedResponse__c</fullName>
        <label>Defined Response</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Indicates if the attribute response is active or inactive</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UniqueID__c</fullName>
        <description>Stores unique ID for Attribute Defined Response - a combination of attribute title and defined response.</description>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Attribute Defined Response</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ADR-{00000}</displayFormat>
        <label>AttributeDefinedResponse Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AttributeDefinedResponse</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>